# buzz-operator

./: .gitignore  Cargo.toml  README.md  app_config.yaml  buzzoperator.yaml  configuration.yaml  loggs  new_hello  sman.yaml  temp
bash/: a.md  conf.yaml  health-check  nginx-update  start  stop  update  upload  watch
debian/unit-scripts/: buzzoperator.service  sman.service
diagrams/: bunch_state_machine.excalidraw  service.excalidraw
examples/: nginx-update.rs
src/: bunch_controller.rs  configuration.rs  connect_addr.rs  controller.rs  fs_watcher.rs  lib.rs  log.rs  main.rs  service.rs  task.rs
src/service/: mod.rs  service_bunch.rs  service_unit.rs  unit_connection.rs
src/service/service_bunch/: error.rs  message.rs  mod.rs  state_machine.rs
test_app/exec_dir/: hello
