[package]
name = "sman"
authors = ["ghashy <obsidian.musicwork@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Automate deployment, rolling updating, health checking, etc."

[[bin]]
name = "sman"
path = "src/main.rs"

[dependencies]
libc = "0.2.149"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "signal",
] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
config = "0.13.3"
notify = "6.1.1"
serde = { version = "1.0.186", features = ["derive"] }
chrono = "0.4.26"

[dev-dependencies]
tokio-test = "0.4.3"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Here will be extended description."
section = "admin"
priority = "optional"
maintainer-scripts = "debian/scripts"
systemd-units = { enable = true, unit-scripts = "debian/unit-scripts", unit-name = "sman" }
assets = [["target/release/sman", "usr/bin/sman", "755"]]
