[package]
name = "buzz-operator"
authors = ["ghashy <obsidian.musicwork@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Automate deployment, rolling updating, health checking, etc."

[[bin]]
name = "buzzoperator"
path = "src/main.rs"

[[bin]]
name = "nginx-update"
path = "src/bin/nginx-update.rs"

[[bin]]
name = "nginx-update-2"
path = "src/bin/nginx-update-2.rs"

[dependencies]
libc = "0.2.149"
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "signal",
    "time",
] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
config = "0.13.3"
notify = "6.1.1"
serde = { version = "1.0.186", features = ["derive"] }
chrono = "0.4.26"
clap = { version = "4.4.7", features = ["derive"] }
regex = "1.10.2"

[dev-dependencies]
# tokio-test = "0.4.3"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Here will be extended description."
section = "admin"
priority = "optional"
maintainer-scripts = "debian/scripts"
systemd-units = { enable = true, unit-scripts = "debian/unit-scripts", unit-name = "buzzoperator" }
assets = [["target/release/buzzoperator", "usr/bin/buzzoperator", "755"]]
