[package]
name = "buzzoperator"
authors = ["ghashy <obsidian.musicwork@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Automate deployment, rolling updating, health checking, etc."
license-file = "LICENSE-MIT"

[[bin]]
name = "buzzoperator"
path = "src/main.rs"

[dependencies]
libc = "0.2.149"
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "signal",
    "time",
    "net"
] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
config = "0.13.3"
notify = "6.1.1"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.26"
clap = { version = "4.4.7", features = ["derive"] }
regex = "1.10.2"

[[example]]
name = "nginx-update"
path = "examples/nginx-update.rs"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Here will be extended description."
section = "admin"
priority = "optional"
maintainer-scripts = "debian/scripts"
# TODO: enable should be true by default, but management commands should be implemented
# for now, temporary solution is disable by default
systemd-units = { enable = false, unit-scripts = "debian/unit-scripts", unit-name = "buzzoperator" }
conf-files = ["etc/buzzoperator/buzzoperator.yaml"]
assets = [
    ["target/release/buzzoperator", "usr/bin/buzzoperator", "755"],
    ["buzzoperator.yaml", "etc/buzzoperator/buzzoperator.yaml", "755"]
]
